--- a/sharinpix/src/classes/TagActionController_TEST.cls
+++ b/sharinpix/src/classes/TagActionController_TEST.cls
@@ -7,6 +7,7 @@ private class TagActionController_TEST {
 	static Account account;
 	static Opportunity opportunity;
 	static Contact contact;
+	static String API_URL = 'https://api.sharinpix.com/api/v1';
 	static {
 		responseMap = new map<string, string>{
 			'imageUrl' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":3024,"height":4032,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"full_url","field_name":"Website","custom_value":""}]}}}',
@@ -15,7 +16,8 @@ private class TagActionController_TEST {
 			'currency' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":3024,"height":4032,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"custom","field_name":"AnnualRevenue","custom_value":"1000"}]}}}',
 			'percent' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":3024,"height":4032,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"custom","field_name":"Probability","custom_value":"1"}]}}}',
 			'integer' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":300,"height":400,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"width","field_name":"NumberOfEmployees","custom_value":""}]}}}',
-			'geolocation' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":300,"height":400,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"gps","field_name":"MailingAddress","custom_value":""}]}}}'
+			'geolocation' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":300,"height":400,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"gps","field_name":"MailingAddress","custom_value":""}]}}}',
+			'transformation' => '{"id":"f89231e9-d767-49ac-8b6c-77f0247dfc03","created_at":"2016-12-13T07:57:40.018+01:00","user":"644f9574-2ffa-40db-bace-fba46ed0ac46","image":{"public_id":"51432d68-7aea-435e-b1fa-728962e7ea7b","gps":[-20.43166666666667,57.51583333333333],"gps_exifs":[-20.43166666666667,57.51583333333333],"gps_html":null,"created_at":"2016-12-12T11:37:57.798+01:00","width":3024,"height":4032,"rotation":0,"crop_x":0,"crop_y":0,"crop_w":0,"crop_h":0,"metadatas":{},"original_url":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ySnj1lDv--/fl_attachment/v1481539072/lw3mee7ynxbjemwqb85s.jpg","album_id":"0030Y000007yGaxQAE","thumbnails":{"full":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--ppRMlHMf--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","large":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--vy4-AMc7--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg","mini":"https://res.cloudinary.com/hcdh57m0l/image/authenticated/s--AdrsvVHz--/c_fi…/fl_attachment/dpr_auto,q_auto,f_auto/v1481539072/lw3mee7ynxbjemwqb85s.jpg"},"external_urls":{"fill100":"https://res.cloudinary.com/kevan1881/image/authenticated/s--V_8qK17G--/c_fill,h_100,w_100/v1484299303/qjpbaammu9y9qs2pmosi.jpg","fit2000":"https://res.cloudinary.com/kevan1881/image/authenticated/s--dI1tWZLt--/c_fit,h_2000,w_2000/v1484299303/qjpbaammu9y9qs2pmosi.jpg"}},"tag":{"id":"63439302-04da-41ae-bce6-7ad243433b99","created_at":"2016-12-12T11:32:22.941+01:00","name":"main_picture","label":"{}","url":"https://scpix-pr-773.herokuapp.com/public_tags/63439302-04da-41ae-bce6-7ad243433b99","public":false,"listed":true,"action":{"actions":[{"value":"fit","field_name":"Description","custom_value":"500"}]}}}'
 		};
 
 
@@ -87,6 +89,20 @@ private class TagActionController_TEST {
 
 		system.assertEquals(cont.MailingLatitude, -20.43166666666667);
 		system.assertEquals(cont.MailingLongitude, 57.51583333333333);
+	}
+
+	@isTest static void testTransformation() {
+		Map<String, HttpCalloutMock> requestResponses = new Map<String, HttpCalloutMock> {
+			API_URL + '/image_external_urls' => new SingleRequestMock(200, 'OK','{"resource_url":"https://proxy.url"}', null)
+		};
+		Test.setMock(HttpCalloutMock.class, new MultiRequestMock(requestResponses));
+
+		Test.startTest();
+		TagActionController.executeCommand(account.Id, responseMap.get('transformation'));
+		Test.stopTest();
+
+
+		System.assertEquals([SELECT Description FROM Account WHERE Id = :account.Id].Description, 'https://proxy.url');
 	}
 
 	@isTest static void testLightning_number() {
